<resources>
    <string name="app_name">El-Bazaar</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="facebook_app_id">1991115684281678</string>
    <string name="fb_login_protocol_scheme">fb1991115684281678</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="close_drawer">Close</string>
    <string name="join_el_bazaar">Join El-Bazaar</string>
    <string name="organizer">Organizer</string>
    <string name="join_btn">JOIN</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_btn">LOGIN</string>
    <string name="login_toolbar">Login</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="register">REGISTER</string>
    <string name="join_text">Join</string>
    <string name="login_text">Login</string>
    <string name="profile_title">Profile</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="save_profile_btn">SAVE</string>
    <string name="post_your_product">Post Your Product</string>
    <string name="bazaar_and_location">Bazaar and it\'s location</string>
    <string name="post">POST</string>
    <string name="description">Description</string>
    <string name="product_desc">Chambray Carles Terry Gibson balls plaid wolf. Disrupt fashion axe 90\'s quinoa +1 Neutra. Irony ethnic ennui McSweeney\'s, semiotics small.</string>
    <string name="read_more">Read More</string>
    <string name="vendor_contacts">Vendor Contacts</string>
    <string name="about_me">About Me</string>
    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,se d do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qu is nostrud exercitatio ullamco laboris nisi ut aliqu ip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit ess cillum dolg</string>
    <string name="organizers">Organizers</string>
    <string name="reviews">Reviews</string>
    <string name="write_review">Write Review</string>
    <string name="by_user">By user-</string>
    <string name="capacity">Capacity</string>
    <string name="currency">Currency</string>
    <string name="organizer_contacts">Organizer Contacts</string>
    <string name="vendors">Vendors</string>
    <string name="favorites">Favorites</string>
    <string-array name="currency_array">
        <item>EGP</item>
        <item>USD</item>
        <item>SAR</item>
        <item>EUR</item>
    </string-array>
    <string-array name="capacity_array">
        <item>4 Vendors</item>
        <item>5 Vendors</item>
        <item>6 Vendors</item>
        <item>7 Vendors</item>
    </string-array>
</resources>
