<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="65dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp">
        <ImageView
            android:id="@+id/back_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back"
            android:layout_margin="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:lineSpacingExtra="4sp"
            android:text="@string/join_el_bazaar"
            />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:hint="Full Name"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:hint="Email"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/mobile"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:inputType="number"
        android:hint="Mobile"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="Password"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        app:met_iconRight="@drawable/show_pass"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/type_group">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/organizer_radio"
            android:layout_marginStart="25dp"
            android:text="@string/organizer"
            android:layout_weight="1"
            android:buttonTint="@color/colorAccent"
            android:textColor="@color/black"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="Vendor"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:id="@+id/vendor_radio"
            android:buttonTint="@color/colorAccent"
            android:paddingLeft="16dp"
            />
    </RadioGroup>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/address"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="Address"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:buttonTint="@color/sapphire"
        android:text="By clicking Register, You agree to El-Bazaar&apos;s
Terms of Use"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        />
    <Button
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_background"
        android:text="@string/join_btn"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="88dp"
        android:text="@string/already_have_account"
        android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/login_btn"/>
    </LinearLayout>
</LinearLayout>