<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:hint="Full Name"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:hint="Email"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/mobile"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:inputType="number"
        android:hint="Mobile"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:hint="Password"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        app:met_iconRight="@drawable/show_pass"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/type_group">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:id="@+id/organizer_radio"
            android:layout_marginStart="25dp"
            android:text="@string/organizer"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimary"
            android:textColor="@color/black"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:id="@+id/vendor_radio"
            android:text="Vendor"
            android:buttonTint="@color/colorPrimary"
            />
    </RadioGroup>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/address"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:hint="Address"
        app:met_textColorHint="@color/steel_grey"
        app:met_baseColor="@color/black"
        app:met_primaryColor="@color/sapphire"
        />
    <CheckBox
        android:id="@+id/check_user_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:buttonTint="@color/sapphire"
        android:text="By clicking Register, You agree to El-Bazaar&apos;s
Terms of Use"
        android:textColor="@color/black"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        />
    <Button
        android:id="@+id/join_button"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_background"
        android:text="@string/join_btn"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="88dp"
            android:text="@string/already_have_account"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/login_btn"/>
    </LinearLayout>

</LinearLayout>